# web-agent-filterer

./: .env  Embedding.py  EmbeddingAPI.ipynb  Embedding_ex.ipynb  README.md  about.html  blog.html  contact.html  freek.ipynb  html_helpers.py  index.html  main.ipynb  make_query.py  portfolio.html  requirements.txt  script.js  services.html  styles.css  test.ipynb
agent/: __init__.py  controller.py  filterer.py  llm.py  navigator.py  planner.py  pyproject.toml  run.py  schemas.py  utils.py
